improve font sizing for mobile and with min media queries

--- a/style.css
+++ b/style.css
@@ -6,19 +6,38 @@
 } */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@500&display=swap");
 
-h1 {
-  font-family: "Oswald", sans-serif;
-  font-size: 56px;
-}
-h2 {
-  font-family: "Montserrat", sans-serif;
-  font-size: 24px;
-  font-weight: 1200;
+@media screen and (min-width: 601px) {
+  h1 {
+    font-family: "Oswald", sans-serif;
+    font-size: 56px;
+  }
+  h2 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    font-weight: 1200;
+  }
+
+  p {
+    font-family: "Montserrat", sans-serif;
+    font-size: 18px;
+  }
 }
 
-p {
-  font-family: "Montserrat", sans-serif;
-  font-size: 18px;
+@media screen and (max-width: 600px) {
+  h1 {
+    font-family: "Oswald", sans-serif;
+    font-size: 26px;
+  }
+  h2 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    font-weight: 1200;
+  }
+
+  p {
+    font-family: "Montserrat", sans-serif;
+    font-size: 9px;
+  }
 }
 
 body {
@@ -86,15 +105,29 @@ body {
   transform-style: preserve-3d;
 }
 
-.carousel__photo {
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  margin: auto;
-  padding: 1rem 4rem;
-  z-index: 100;
-  transition: transform 0.5s, opacity 0.5s, z-index 0.5s;
+@media screen and (min-width: 601px) {
+  .carousel__photo {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    margin: auto;
+    padding: 1rem 4rem;
+    z-index: 100;
+    transition: transform 0.5s, opacity 0.5s, z-index 0.5s;
+  }
+}
+@media screen and (max-width: 600px) {
+  .carousel__photo {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    margin: auto;
+    padding: 1rem 1.1rem;
+    z-index: 100;
+    transition: transform 0.5s, opacity 0.5s, z-index 0.5s;
+  }
 }
 
 .carousel__photo.initial,
@@ -115,36 +148,73 @@ body {
   transform: translateX(100%); /* Move 'next' item to the right */
 }
 
-.carousel__button--prev,
-.carousel__button--next {
-  position: absolute;
-  top: 50%;
-  width: 3rem;
-  height: 3rem;
-  background-color: #fff;
-  transform: translateY(-50%);
-  border-radius: 50%;
-  cursor: pointer;
-  z-index: 1001; /* Sit on top of everything */
-  border: 1px solid black;
+@media screen and (min-width: 601px) {
+  .carousel__button--prev,
+  .carousel__button--next {
+    position: absolute;
+    top: 50%;
+    width: 3rem;
+    height: 3rem;
+    background-color: #fff;
+    transform: translateY(-50%);
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 1001; /* Sit on top of everything */
+    border: 1px solid black;
+  }
 }
+
+@media screen and (max-width: 600px) {
+  .carousel__button--prev,
+  .carousel__button--next {
+    position: absolute;
+    top: 50%;
+    width: 1rem;
+    height: 1rem;
+    background-color: #fff;
+    transform: translateY(-50%);
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 1001; /* Sit on top of everything */
+    border: 1px solid black;
+  }
+}
+
 .carousel__button--prev {
   left: 0;
 }
 .carousel__button--next {
   right: 0;
 }
-.carousel__button--prev::after,
-.carousel__button--next::after {
-  content: " ";
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  top: 50%;
-  left: 54%;
-  border-right: 2px solid black;
-  border-bottom: 2px solid black;
-  transform: translate(-50%, -50%) rotate(135deg);
+
+@media screen and (min-width: 601px) {
+  .carousel__button--prev::after,
+  .carousel__button--next::after {
+    content: " ";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    top: 50%;
+    left: 54%;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+    transform: translate(-50%, -50%) rotate(135deg);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .carousel__button--prev::after,
+  .carousel__button--next::after {
+    content: " ";
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    top: 50%;
+    left: 54%;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+    transform: translate(-50%, -50%) rotate(135deg);
+  }
 }
 .carousel__button--next::after {
   left: 47%;
