--- a/style.css
+++ b/style.css
@@ -19,18 +19,18 @@
 
   p {
     font-family: "Montserrat", sans-serif;
-    font-size: 18px;
+    font-size: 16px;
   }
 }
 
 @media screen and (max-width: 600px) {
   h1 {
     font-family: "Oswald", sans-serif;
-    font-size: 26px;
+    font-size: 24px;
   }
   h2 {
     font-family: "Montserrat", sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 1200;
   }
 
@@ -81,7 +81,7 @@ body {
 .three-item {
   margin: auto;
   display: inline-block;
-  width: 33%;
+  width: 32%;
   vertical-align: middle;
 }
 .three-img {
@@ -89,6 +89,17 @@ body {
   display: inline-block;
   width: 95%;
   vertical-align: middle;
+}
+
+@media screen and (min-width: 601px) {
+  #quote-img {
+    width: auto;
+  }
+}
+@media screen and (max-width: 600px) {
+  #quote-img {
+    width: 10%;
+  }
 }
 
 /*********************** Carousel ***********************/
